simplyfied entity definition and relationships